Long words are now truncated to avoid bad styling due to text wrapping

--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -19,3 +19,10 @@ textarea {
     resize: vertical;
     margin-bottom: 20px;
 }
+
+.stats-container .name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-right: 48px;
+}
